samples/_failures_safe/1761390940_fc8f79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43a3fe24.c: In function ‘main’:
./samples/SAFE/__tmp_43a3fe24.c:156:5: error: expected declaration or statement at end of input
  156 |     if (strlen(input) == 0) {
      |     ^~
./samples/SAFE/__tmp_43a3fe24.c:156:5: error: expected declaration or statement at end of input
